# Scientific-Calculator-MCP-App

./: CLAUDE.md  Cargo.toml  README.md  justfile  preview.html
examples/: v1-basic-arithmetic.md  v2-llm-decomposition.md  v3-natural-language-math.md
scientific-calculator-mcp-app-lambda/: Cargo.toml
scientific-calculator-mcp-app-lambda/src/: main.rs
src/: code_mode.rs  lib.rs  main.rs
widgets/: keypad.html  package-lock.json  package.json  step.html  vite.config.js
