[package]
name = "scientific-calculator-mcp-app-lambda"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "bootstrap"
# AWS Lambda Custom Runtime API requires this exact binary name.
# See: https://docs.aws.amazon.com/lambda/latest/dg/runtimes-custom.html
path = "src/main.rs"

[dependencies]
scientific-calculator-mcp-app = { path = ".." }
pmcp = { version = "2.6", features = ["full"] }

# Lambda runtime
lambda_http = "0.13"
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
